// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptListItem rendering tests PromptListItem - isSelected false - rendered test 1`] = `
<div>
  <a
    data-testid="mock-link"
    href="/prompts/334db648-f300-4284-8149-075ff465d751"
  >
    <div
      class="group px-4 py-3 cursor-pointer transition-all border-l-2 hover:bg-slate-50 border-l-transparent"
      data-testid="prompt-list-item"
    >
      <div
        class="flex items-start gap-3"
      >
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-2 mb-1.5"
          >
            <h3
              class="font-medium text-sm text-slate-900 truncate flex-1"
            >
              title 1
            </h3>
            <button
              class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 rounded-md gap-1.5 has-[>svg]:px-2.5 h-6 w-6 p-0 flex-shrink-0 opacity-100 transition-opacity"
              data-slot="button"
              data-testid="toggle-favorite-btn"
              title="Remove from favorites"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-star w-3.5 h-3.5 fill-yellow-400 text-yellow-500"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex flex-wrap gap-1 mb-1.5"
          >
            <span
              class="text-xs px-1.5 py-0.5 bg-slate-100 text-slate-600 rounded"
            >
              category 0
            </span>
            <span
              class="text-xs px-1.5 py-0.5 bg-slate-100 text-slate-600 rounded"
            >
              category 1
            </span>
            <span
              class="text-xs px-1.5 py-0.5 text-slate-500"
            >
              +
              1
            </span>
          </div>
          <div
            class="flex items-center gap-2 text-xs text-slate-500"
          >
            <span
              class="inline-flex items-center gap-1"
            >
              <span
                class="font-medium"
              >
                v
              </span>
            </span>
            <span
              class="text-slate-300"
            >
              •
            </span>
            <span
              class="inline-flex items-center gap-1 truncate"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-clock w-3 h-3 flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 6v6l4 2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
              27. Sept. 2025, 02:00 AM
            </span>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`PromptListItem rendering tests PromptListItem - isSelected true - rendered test 1`] = `
<div>
  <a
    data-testid="mock-link"
    href="/prompts/334db648-f300-4284-8149-075ff465d751"
  >
    <div
      class="group px-4 py-3 cursor-pointer transition-all border-l-2 hover:bg-slate-50 bg-blue-50 border-l-blue-600"
      data-testid="prompt-list-item"
    >
      <div
        class="flex items-start gap-3"
      >
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-2 mb-1.5"
          >
            <h3
              class="font-medium text-sm text-slate-900 truncate flex-1"
            >
              title 1
            </h3>
            <button
              class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 rounded-md gap-1.5 has-[>svg]:px-2.5 h-6 w-6 p-0 flex-shrink-0 opacity-0 group-hover:opacity-100 transition-opacity"
              data-slot="button"
              data-testid="toggle-favorite-btn"
              title="Add to favorites"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-star w-3.5 h-3.5 text-slate-400 hover:text-yellow-500"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex flex-wrap gap-1 mb-1.5"
          >
            <span
              class="text-xs px-1.5 py-0.5 bg-slate-100 text-slate-600 rounded"
            >
              category 0
            </span>
            <span
              class="text-xs px-1.5 py-0.5 bg-slate-100 text-slate-600 rounded"
            >
              category 1
            </span>
            <span
              class="text-xs px-1.5 py-0.5 text-slate-500"
            >
              +
              1
            </span>
          </div>
          <div
            class="flex items-center gap-2 text-xs text-slate-500"
          >
            <span
              class="inline-flex items-center gap-1"
            >
              <span
                class="font-medium"
              >
                v
              </span>
            </span>
            <span
              class="text-slate-300"
            >
              •
            </span>
            <span
              class="inline-flex items-center gap-1 truncate"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-clock w-3 h-3 flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 6v6l4 2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
              27. Sept. 2025, 02:00 AM
            </span>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;
